--- a/pages/La-note-encahntée.html
+++ b/pages/La-note-encahntée.html
@@ -229,7 +229,7 @@
                     <p class="footer-subtext1">Devenir partenaire</p>
                 </a>
                     <a href="#" class="subtext2">Mentions légales</a>
-                    <a href="#"  class="subtext2">Contact</a>
+                    <a href="mailto:" class="subtext2">Contact</a>
             </div>               
         </div>
     </footer>
