--- a/pages/À-la-française.html
+++ b/pages/À-la-française.html
@@ -228,7 +228,7 @@
                     <p class="footer-subtext1">Devenir partenaire</p>
                 </a>
                     <a href="#" class="subtext2">Mentions légales</a>
-                    <a href="#"  class="subtext2">Contact</a>
+                    <a href="mailto:" class="subtext2">Contact</a>
             </div>               
         </div>
     </footer>
