--- a/index.html
+++ b/index.html
@@ -12,7 +12,19 @@
     <link rel="stylesheet" href="style.scss">
     <title>Ohmyfood!</title>
 </head>
-<body>
+ <body>
+    <section class="loading-wrapper">
+        <div class="loading">
+            <div class="obj"></div>
+            <div class="obj"></div>
+            <div class="obj"></div>
+            <div class="obj"></div>
+            <div class="obj"></div>
+            <div class="obj"></div>
+            <div class="obj"></div>
+            <div class="obj"></div>
+        </div>
+    </section>
     <section id="main-container">
         <header>
             <div class="logo-container">
@@ -22,7 +34,7 @@
             </div>
             <div class="place-container">
                 <i class="fas fa-map-marker-alt"></i>
-                <p class="place-text">Paris, Belleville</p>
+                <input type="text" class="place-text" placeholder="Paris, Belleville">
             </div>
             <div class="search-container">
                 <div class="search-title-container">
