--- a/OhMyFood/pages/La-pallette-du-gôut.html
+++ b/OhMyFood/pages/La-pallette-du-gôut.html
@@ -21,7 +21,7 @@
                 <img class="logo-img" src="../logo/ohmyfood@2x.svg" alt="Logo-OhMyFood">
             </a>
         </div>
-        <img class="img-background" src="../restaurants/Jay-Wennington.png" alt="image-du-restaurant-La-Pallette-Du-Gôut">
+        <img class="img-background" src="../rest-img/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="image-du-restaurant-La-Pallette-Du-Gôut">
     </header>
     <section class="menu-container">
         <div class="bloc-container">
