--- a/OhMyFood/pages/La-note-encahntée.html
+++ b/OhMyFood/pages/La-note-encahntée.html
@@ -21,7 +21,7 @@
                 <img class="logo-img" src="../logo/ohmyfood@2x.svg" alt="Logo-OhMyFood">
             </a>
         </div>
-        <img class="img-background" src="../restaurants/stil-u.png" alt="image-du-restaurant-La-Pallette-Du-Gôut">
+        <img class="img-background" src="../rest-img/stil-u2Lp8tXIcjw-unsplash.jpg" alt="image-du-restaurant-La-Pallette-Du-Gôut">
     </header>
     <section class="menu-container">
         <div class="bloc-container">
