--- a/OhMyFood/pages/Le-délice-des-sens.html
+++ b/OhMyFood/pages/Le-délice-des-sens.html
@@ -21,7 +21,7 @@
                 <img class="logo-img" src="../logo/ohmyfood@2x.svg" alt="Logo-OhMyFood">
             </a>
         </div>
-        <img class="img-background" src="../restaurants/louis-hansel.png" alt="image-du-restaurant-La-Pallette-Du-Gôut">
+        <img class="img-background" src="../rest-img/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="image-du-restaurant-La-Pallette-Du-Gôut">
     </header>
     <section class="menu-container">
         <div class="bloc-container">
