--- a/OhMyFood/pages/À-la-française.html
+++ b/OhMyFood/pages/À-la-française.html
@@ -21,7 +21,7 @@
                 <img class="logo-img" src="../logo/ohmyfood@2x.svg" alt="Logo-OhMyFood">
             </a>
         </div>
-        <img class="img-background" src="../restaurants/toa-heftiba.png" alt="image-du-restaurant-La-Pallette-Du-Gôut">
+        <img class="img-background" src="../rest-img/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="image-du-restaurant-La-Pallette-Du-Gôut">
     </header>
     <section class="menu-container">
         <div class="bloc-container">
